# music-stream

./: .env  .gitignore  1.json  Docker-compose.yaml  README.md  loki-config.yaml  main.py  mypy.ini  nginx.conf  prometheus.yml  pyproject.toml  test
music_stream/: data.json  db.sqlite3  manage.py  pytest.ini  temp.json
music_stream/apps/core/: middleware.py  views.py
music_stream/apps/core/logger/: formatters.py
music_stream/apps/music/: admin.py  apps.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
music_stream/apps/music/migrations/: 0001_initial.py  0003_alter_album_slug_alter_playlist_slug_and_more.py  0004_alter_trackinalbum_options_alter_album_status_and_more.py  0006_alter_album_is_explicit_alter_playlist_is_explicit_and_more.py  0008_alter_album_is_explicit_alter_album_slug_and_more.py  0012_remove_genre_bpm_genre_max_bpm_genre_min_bpm.py  0014_artist_created_at_alter_album_status_and_more.py  0015_remove_track_idx_track_artist_remove_track_artist.py  0016_artist_user.py  0017_delete_userartist.py  0018_track_hsl_playlist.py  0020_alter_trackmetadata_track.py  0021_alter_albumartist_album_alter_albumartist_artist_and_more.py  0022_alter_trackinalbum_track.py
music_stream/apps/music/services/: __init__.py  album.py  album_artist.py  artist.py  artist_track.py  genre.py  genre_album.py  genre_track.py  track.py  track_in_album.py
music_stream/apps/music/tests/: services.py  test_forms.py
music_stream/apps/music_stream/: settings.py  urls.py  wsgi.py
music_stream/apps/oauth/: apps.py  oauth_config.py  views.py
music_stream/apps/theme/static_src/: postcss.config.js
music_stream/apps/theme/templates/: base.html
music_stream/apps/track_processing/: apps.py  services.py  tasks.py  urls.py  views.py
music_stream/apps/users/: services.py  urls.py  views.py
music_stream/apps/users/tests/: test_models.py
music_stream/auth/: OAuth_config.py  urls.py  utils.py  views.py
music_stream/config/: asgi.py  celery.py  minio.py  urls.py  wsgi.py
music_stream/config/settings/: base.py  constants.py  dev.py  prod.py
music_stream/music/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
music_stream/music/migrations/: 0002_auto_20250720_1745.py  0005_alter_album_title_alter_track_title.py  0007_alter_album_is_explicit_alter_playlist_is_explicit_and_more.py  0009_remove_album_artist.py  0010_artisttrack.py  0011_genre_bpm_genre_decade_emerged_genre_description_and_more.py  0013_alter_genre_slug.py  0019_rename_hsl_playlist_track_hls_playlist_and_more.py
music_stream/music/static/css/: styles.css
music_stream/music/static/js/: album_detail.js  create_album.js  (+2 more)
music_stream/music/tests/: factories.py  test_forms.py  test_models.py  test_views.py
music_stream/music_stream/: asgi.py  minio.py  settings.py  urls.py
music_stream/oauth/: oauth_config.py  services.py  urls.py  views.py
music_stream/oauth/tests/: test_oauth.py
music_stream/static/css/: styles.css
music_stream/static/js/: google_auth.js  player.js
music_stream/staticfiles/js/: player.js
music_stream/stream/: urls.py  views.py
music_stream/templates/: base.html
music_stream/theme/static_src/: postcss.config.js
music_stream/theme/templates/: base.html  index.html
music_stream/track_stream/: apps.py  hls_track_convertor.py  utils.py  views.py
music_stream/users/: admin.py  forms.py  services.py  urls.py  views.py
music_stream/users/tests/: test_models.py
nginx/: Dockerfile  nginx.conf
(+36 files in other folders)
